提交了新的tensorflow和pytorch的api信息

--- a/oracle/bug_tracker.ipynb
+++ b/oracle/bug_tracker.ipynb
@@ -153,13 +153,43 @@
    "source": [
     "12. fuzzer/seeds/test_seeds/zero-shot/100/119_115_106/seed_1.py\n",
     "\n",
-    "出现多个种子集中在同一文件里，暂时忽略\n",
+    "种子问题：出现多个种子集中在同一文件里"
+   ],
+   "id": "910dec81536cc316"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
     "\n",
     "13. fuzzer/seeds/test_seeds/zero-shot/103/123_119_110/seed_4.py\n",
     "\n",
-    "在 PyTorch 部分将 weight_pt 张量的形状设置为 (1, 3)，而你期望它进行的是线性变换，因此需要将 weight_pt 的形状转换为 (3, 1)，与输入 input_pt 的形状 (1, 3) 兼容"
+    "种子问题：在 PyTorch 部分将 weight_pt 张量的形状设置为 (1, 3)，而你期望它进行的是线性变换，因此需要将 weight_pt 的形状转换为 (3, 1)，与输入 input_pt 的形状 (1, 3) 兼容"
    ],
-   "id": "910dec81536cc316"
+   "id": "70d20905c248a13a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "14. fuzzer/seeds/test_seeds/test/1/1_1_1/seed_3.py\n",
+    "\n",
+    "PyTorch、TensorFlow 和 JAX 在这个特定情况下的错误是一致的。所有三个框架都报错，原因是它们在执行矩阵乘法时遇到了 不兼容的形状。\n",
+    "问题：他们三个库之间的直接错误类型都不一致，无法直接通过报错来判断是否一致。\n",
+    "\n"
+   ],
+   "id": "eaaf817aba221985"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "15. fuzzer/seeds/test_seeds/zero-shot/499/604_613_536/seed_2.py\n",
+    "\n",
+    "种子问题：Jax code execution failed: AttributeError: module 'jax.nn' has no attribute 'max_pool'"
+   ],
+   "id": "1281d3d07baf0a18"
   }
  ],
  "metadata": {
